fix spacing on timer

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -69,6 +69,10 @@ body {
   margin: 0;
 }
 
+pre {
+  margin: 0;
+}
+
 .title {
   text-align: center;
   margin: 0;
